--- a/language/en-GB/en-GB.plg_fields_gallery.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.ini
@@ -1,8 +1,19 @@
 PLG_FIELDS_GALLERY="Gallery"
 PLG_FIELDS_GALLERY_DESC="Gallery Custom Field for Joomla! with Lightbox"
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Pictures"
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_DESC="Choose if you want to select single pictures, or all pictures inside a folder, to output"
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Select single picture"
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_FOLDER_LABEL="Select pictures from folder"
 PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_LABEL="Directory"
 PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_DESC="Select your image directory"
-PLG_FIELDS_GALLERY_PARAMS_MULTIPLE_LABEL="Multiple"
-PLG_FIELDS_GALLERY_PARAMS_MULTIPLE_DESC="Choose if you want multiple selection"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_LABEL="Container class"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_DESC="Define container class for output"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_LABEL="Container class_suffix"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_suffix for output"
+PLG_FIELDS_GALLERY_LABEL="Gallery"
+COM_FIELDS_FIELD_USE_GLOBAL="root (images)"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Picture"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_TITLE_LABEL="Alt Text"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_TITLE_DESC="Alternative text used for visitors without access to images. Used for Title-Tag too."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_LABEL="Caption"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_DESC="Caption text used as description."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_LABEL="Caption position"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_DESC=""
