--- a/language/en-GB/en-GB.plg_fields_gallery.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.ini
@@ -11,11 +11,13 @@ PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_su
 PLG_FIELDS_GALLERY_LABEL="Gallery"
 COM_FIELDS_FIELD_USE_GLOBAL="root (images)"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Picture"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_TITLE_LABEL="Alt Text"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_TITLE_DESC="Alternative text used for visitors without access to images. Used for Title-Tag too."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_LABEL="Alt Text"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alternative text used for visitors without access to images."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_LABEL="Title Text"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_DESC="Text used for images title attribute. If caption -> overlay is selected, the title text will be set as H4 inside the overlay and not as attribute."
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_LABEL="Caption"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_DESC="Caption text used as description."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_DESC="Caption text used as description. HTML is possible."
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_LABEL="Caption position"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_DESC=""
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_DESC="Overlay only works, if framework support it."
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_OPTION_DEFAULT_LABEL="Default"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_OPTION_OVERLAY_LABEL="Overlay"
