Platzhalter sortiert und erweitert für Layoutauswahl

--- a/language/en-GB/en-GB.plg_fields_gallery.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.ini
@@ -1,15 +1,27 @@
-PLG_FIELDS_GALLERY="Gallery"
+; Global
+PLG_FIELDS_GALLERY="Fields - Gallery"
 PLG_FIELDS_GALLERY_DESC="Gallery Custom Field for Joomla! with Lightbox"
+
+; Container class_suffix
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_LABEL="Container class_suffix"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_suffix for output"
+
+; Layout
+PLG_FIELDS_GALLERY_LAYOUT_LABEL="Layout"
+PLG_FIELDS_GALLERY_LAYOUT_DESC="Select layout for output"
+
+; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Pictures"
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_DESC="Choose if you want to select single pictures, or all pictures inside a folder, to output"
-PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Select single picture"
+
+; Pictures - Folder
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_FOLDER_LABEL="Select pictures from folder"
 PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_LABEL="Directory"
 PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_DESC="Select your image directory"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_LABEL="Container class_suffix"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_suffix for output"
-PLG_FIELDS_GALLERY_LABEL="Gallery"
 COM_FIELDS_FIELD_USE_GLOBAL="root (images)"
+
+; Pictures - Single picture
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Select single picture"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Picture"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_LABEL="Alt Text"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alternative text used for visitors without access to images."
