--- a/language/en-GB/en-GB.plg_fields_gallery.sys.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.sys.ini
@@ -1,2 +1,3 @@
-PLG_FIELDS_GALLERY="Gallery"
+; Global
+PLG_FIELDS_GALLERY="Fields - Gallery"
 PLG_FIELDS_GALLERY_DESC="Gallery Custom Field for Joomla! with Lightbox"
