--- a/language/en-GB/en-GB.plg_fields_gallery.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.ini
@@ -10,6 +10,15 @@ PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_su
 PLG_FIELDS_GALLERY_LAYOUT_LABEL="Layout"
 PLG_FIELDS_GALLERY_LAYOUT_DESC="Select layout for output"
 
+; Uikit2
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_LABEL="Uikit 2 Grid"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_DESC="Define Uikit 2 Grid classes (e.g. uk-grid-width-medium-1-4)"
+
+; Uikit3
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_LABEL="Uikit 3 Grid"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_DESC="Define Uikit 3 Grid classes (e.g. uk-child-width-1-4@m)"
+
+
 ; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Pictures"
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_DESC="Choose if you want to select single pictures, or all pictures inside a folder, to output"
