--- a/language/de-DE/de-DE.plg_fields_gallery.ini
+++ b/language/de-DE/de-DE.plg_fields_gallery.ini
@@ -10,14 +10,19 @@ PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Definiere ein Container c
 PLG_FIELDS_GALLERY_LAYOUT_LABEL="Layout"
 PLG_FIELDS_GALLERY_LAYOUT_DESC="Wähle ein Layout aus"
 
-; Uikit2
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_LABEL="Uikit 2 Grid"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_DESC="Eingabe Uikit 2 Grid Klassen (z.B. uk-grid-width-medium-1-4)"
-
-; Uikit3
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_LABEL="Uikit 3 Grid"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_DESC="Define Uikit 3 Grid Klassen (e.g. uk-child-width-1-4@m)"
-
+; Items x line
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_LABEL="Bilder pro Zeile"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_LABEL="<480px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_LABEL=">=480px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_LABEL=">=768px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_LABEL=">=960px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_LABEL=">=1220px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_DESC=""
 
 ; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Bilder"
