--- a/language/en-GB/en-GB.plg_fields_gallery.ini
+++ b/language/en-GB/en-GB.plg_fields_gallery.ini
@@ -10,14 +10,19 @@ PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Define container class_su
 PLG_FIELDS_GALLERY_LAYOUT_LABEL="Layout"
 PLG_FIELDS_GALLERY_LAYOUT_DESC="Select layout for output"
 
-; Uikit2
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_LABEL="Uikit 2 Grid"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT2_DESC="Define Uikit 2 Grid classes (e.g. uk-grid-width-medium-1-4)"
-
-; Uikit3
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_LABEL="Uikit 3 Grid"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_UIKIT3_DESC="Define Uikit 3 Grid classes (e.g. uk-child-width-1-4@m)"
-
+; Items x line
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_LABEL="Items x line"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_LABEL="<480px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_LABEL=">=480px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_LABEL=">=768px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_LABEL=">=960px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_LABEL=">=1220px"
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_DESC=""
 
 ; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Pictures"
@@ -34,6 +39,8 @@ PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Select single pictu
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Picture"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_LABEL="Alt Text"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alternative text used for visitors without access to images."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_ON_LABEL="Show Title"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_ON_DESC=""
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_LABEL="Title Text"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_DESC="Text used for images title attribute. If caption -> overlay is selected, the title text will be set as H4 inside the overlay and not as attribute."
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_LABEL="Caption"
