--- a/language/de-DE/de-DE.plg_fields_gallery.ini
+++ b/language/de-DE/de-DE.plg_fields_gallery.ini
@@ -1,20 +1,21 @@
 ; Global
 PLG_FIELDS_GALLERY="Fields - Gallery"
-PLG_FIELDS_GALLERY_DESC="Gallery Custom Field für Joomla! mit Lightbox"
+PLG_FIELDS_GALLERY_DESC="Gallery Custom Field für Joomla! mit Lightbox."
 
 ; Container class_suffix
 PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_LABEL="Container class_suffix"
-PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Definiere ein Container class_suffix für die Ausgabe"
+PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Definiere ein Container class_suffix für die Ausgabe."
 
 ; Layout
-PLG_FIELDS_GALLERY_LAYOUT_LABEL="Layout"
-PLG_FIELDS_GALLERY_LAYOUT_DESC="Wähle ein Layout aus"
+PLG_FIELDS_GALLERY_PARAMS_LAYOUT_LABEL="Layout"
+PLG_FIELDS_GALLERY_PARAMS_LAYOUT_DESC="Wähle ein Layout aus."
+; Layout UIKit2
+PLG_FIELDS_GALLERY_PARAMS_UIKIT2_LIGHTBOX_JS_LABEL="Lightbox JavaScript gedladen"
+PLG_FIELDS_GALLERY_PARAMS_UIKIT2_LIGHTBOX_JS_DESC="Entscheide ob das Lightbox JavaScript bereits über das Template geladen wird, oder ob es noch geladen werden muss."
 
 ; Items x line
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_LABEL="Bilder pro Zeile"
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_DESC=""
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_LABEL="<480px"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XS_DESC=""
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_LABEL=">=480px"
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_DESC=""
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_LABEL=">=768px"
@@ -26,24 +27,24 @@ PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_DESC=""
 
 ; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Bilder"
-PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_DESC="Wähle einzelne Bilder aus oder einen Ordner mit allen Bildern zur Ausgabe"
+PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_DESC="Wähle einzelne Bilder aus oder einen Ordner mit allen Bildern zur Ausgabe."
 
 ; Pictures - Folder
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_FOLDER_LABEL="Auswahl eines Bilderordners"
 PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_LABEL="Verzeichnis"
-PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_DESC="Wähle das Bilderverzeichnis aus"
+PLG_FIELDS_GALLERY_PARAMS_DIRECTORY_DESC="Wähle das Bilderverzeichnis aus."
 COM_FIELDS_FIELD_USE_GLOBAL="root (images)"
 
 ; Pictures - Single picture
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Auswahl einzelner Bilder"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Bilder"
+PLG_FIELDS_GALLERY_PARAMS_CAPTION_OVERLAY_LABEL="Titel anzeigen"
+PLG_FIELDS_GALLERY_PARAMS_CAPTION_OVERLAY_DESC=""
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Einzelbild Auswahl"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_DESC=""
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_PICTURE_LABEL="Bilder"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_LABEL="Alt Text"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alt Text (Alternativ Text) für barrierefreie Websites"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_LABEL="Title Text"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_DESC="Text wird für Bildertitel verwendet. Wenn Caption eingegeben und Overlay ausgewählt ist, wird der Title Text als H4 im Overlay und nicht als Attribut ausgegeben"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_LABEL="Caption"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_DESC="Caption Text wird als Beschreibung ausgegeben. HTML ist erlaubt."
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_LABEL="Caption Position"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_DESC="Overlay funktioniert nur, wenn es das Framework unterstützt"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_OPTION_DEFAULT_LABEL="Default (Standard)"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_CAPTION_POSITION_OPTION_OVERLAY_LABEL="Overlay"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alt Text (Alternativ Text) für barrierefreie Websites."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_LABEL="Titel"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_DESC="Der Titel wird in der Lightbox als Bildtitel verwendet. Wenn Caption oder Overlay ausgewählt ist, wird der Titel zusätzlich dort ausgegeben."
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_CONTAINER_LABEL="Titel Container"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_CONTAINER_DESC="Container-Element für die Ausgabe des Titels im Caption oder Overlay."
