--- a/language/de-DE/de-DE.plg_fields_gallery.ini
+++ b/language/de-DE/de-DE.plg_fields_gallery.ini
@@ -10,20 +10,26 @@ PLG_FIELDS_GALLERY_PARAMS_CONTAINER_CLASS_SUFFIX_DESC="Definiere ein Container c
 PLG_FIELDS_GALLERY_PARAMS_LAYOUT_LABEL="Layout"
 PLG_FIELDS_GALLERY_PARAMS_LAYOUT_DESC="Wähle ein Layout aus."
 ; Layout UIKit2
-PLG_FIELDS_GALLERY_PARAMS_UIKIT2_LIGHTBOX_JS_LABEL="Lightbox JavaScript gedladen"
+PLG_FIELDS_GALLERY_PARAMS_UIKIT2_LIGHTBOX_JS_LABEL="Lightbox JavaScript geladen"
 PLG_FIELDS_GALLERY_PARAMS_UIKIT2_LIGHTBOX_JS_DESC="Entscheide ob das Lightbox JavaScript bereits über das Template geladen wird, oder ob es noch geladen werden muss."
 
 ; Items x line
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_LABEL="Bilder pro Zeile"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_DESC="Anzahl der Bilder pro Zeile für verschiedene Bildschirmauflösungen. Es muss für jede Auflösung eine Angabe gemacht werden."
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_LABEL=">=480px"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_S_DESC="Bildschirmbreite ab 480px"
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_LABEL=">=768px"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_M_DESC="Bildschirmbreite ab 768px"
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_LABEL=">=960px"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_L_DESC="Bildschirmbreite ab 960px"
 PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_LABEL=">=1220px"
-PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_ITEMS_X_LINE_XL_DESC="Bildschirmbreite ab 1220px"
+
+;Thumbnails
+PLG_FIELDS_GALLERY_THUMBNAIL_WIDTH_LABEL="Thumbnail Breite"
+PLG_FIELDS_THUMBNAIL_WIDTH_DESC="Breite der Thumbnails in Pixel. Standart ist 480px."
+PLG_FIELDS_GALLERY_THUMBNAIL_HEIGHT_LABEL="Thumbnail Höhe"
+PLG_FIELDS_THUMBNAIL_HEIGHT_DESC="Höhe der Thumbnails in Pixel. Standart ist 380px."
 
 ; Pictures
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_LABEL="Bilder"
@@ -38,10 +44,11 @@ COM_FIELDS_FIELD_USE_GLOBAL="root (images)"
 ; Pictures - Single picture
 PLG_FIELDS_GALLERY_PARAMS_SINGLE_FOLDER_OPTION_SINGLE_LABEL="Auswahl einzelner Bilder"
 PLG_FIELDS_GALLERY_PARAMS_CAPTION_OVERLAY_LABEL="Titel anzeigen"
-PLG_FIELDS_GALLERY_PARAMS_CAPTION_OVERLAY_DESC=""
+PLG_FIELDS_GALLERY_PARAMS_CAPTION_OVERLAY_DESC="Output of image title: 1. no title, 2. caption, 3. overlay"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_LABEL="Einzelbild Auswahl"
-PLG_FIELDS_GALLERY_SINGLE_PICTURE_DESC=""
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_DESC="Es können einzelne Bilder aus einem Ordner ausgewählt werden, indem man mit "Plus" weitere Bilder hinzufügt. Bilder lassen sich mit Klick auf das "x" wieder entfernen"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_PICTURE_LABEL="Bilder"
+PLG_FIELDS_GALLERY_SINGLE_PICTURE_PICTURE_DESC="Bild auswählen"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_LABEL="Alt Text"
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_ALT_DESC="Alt Text (Alternativ Text) für barrierefreie Websites."
 PLG_FIELDS_GALLERY_SINGLE_PICTURE_TITLE_LABEL="Titel"
